--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,15 +37,13 @@ j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
     ${libs.eclipselink.classpath}:\
-    ${libs.jstl.classpath}:\
-    ${libs.MySQLDriver.classpath}
+    ${libs.jstl.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
 javac.deprecation=false
 javac.processorpath=\
-    ${javac.classpath}:\
-    ${libs.eclipselinkmodelgen.classpath}
+    ${javac.classpath}
 javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
