--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,7 +29,6 @@ dist.war=${dist.dir}/${war.name}
 excludes=
 file.reference.gson-2.10.1.jar=lib\\gson-2.10.1.jar
 file.reference.mysql-connector-j-8.0.33.jar=C:\\Program Files (x86)\\MySQL\\Connector J 8.0\\mysql-connector-j-8.0.33.jar
-file.reference.mysql-connector-java-8.0.22.jar=C:\\Program Files (x86)\\MySQL\\Connector J 8.0\\mysql-connector-java-8.0.22.jar
 file.reference.stripe-java-24.5.0.jar=lib\\stripe-java-24.5.0.jar
 includes=**
 j2ee.compile.on.save=true
@@ -44,8 +43,7 @@ javac.classpath=\
     ${libs.jstl.classpath}:\
     ${file.reference.mysql-connector-j-8.0.33.jar}:\
     ${file.reference.gson-2.10.1.jar}:\
-    ${file.reference.stripe-java-24.5.0.jar}:\
-    ${file.reference.mysql-connector-java-8.0.22.jar}
+    ${file.reference.stripe-java-24.5.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
