--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,6 +28,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 excludes=
 file.reference.gson-2.10.1.jar=lib\\gson-2.10.1.jar
+file.reference.mysql-connector-j-8.0.33.jar=C:\\Program Files (x86)\\MySQL\\Connector J 8.0\\mysql-connector-j-8.0.33.jar
 file.reference.mysql-connector-java-8.0.22.jar=C:\\Program Files (x86)\\MySQL\\Connector J 8.0\\mysql-connector-java-8.0.22.jar
 file.reference.stripe-java-24.5.0.jar=lib\\stripe-java-24.5.0.jar
 includes=**
@@ -122,7 +123,6 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 excludes=
 file.reference.gson-2.10.1.jar=lib\\gson-2.10.1.jar
-file.reference.mysql-connector-j-8.0.33.jar=C:\\Program Files (x86)\\MySQL\\Connector J 8.0\\mysql-connector-j-8.0.33.jar
 file.reference.stripe-java-24.5.0.jar=lib\\stripe-java-24.5.0.jar
 includes=**
 j2ee.compile.on.save=true
@@ -135,9 +135,9 @@ jar.compress=false
 javac.classpath=\
     ${libs.eclipselink.classpath}:\
     ${libs.jstl.classpath}:\
-    ${file.reference.mysql-connector-j-8.0.33.jar}:\
     ${file.reference.gson-2.10.1.jar}:\
-    ${file.reference.stripe-java-24.5.0.jar}
+    ${file.reference.stripe-java-24.5.0.jar}:\
+    ${file.reference.mysql-connector-j-8.0.33.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
